# legal-chatbot

./: CMakeLists.txt  README.md  SERVER_SETUP.md  backend.cpp  docker-compose.yml  package-lock.json  test_contract.txt
backend/: .gitignore  CMakeLists.txt  Dockerfile  backend.cpp  config.cpp  config.hpp  db.cpp  db.hpp  gemini.cpp  gemini.hpp  main.cpp  routes.cpp  routes.hpp
backend/sessionData/: YTg2W00gyCDZLdcmOYSX.json
extension/: .gitignore  INTEGRATION_GUIDE_SANIA.md  README.md  background.js  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  tsconfig.json  vite.config.js
extension/public/: background.js  content.js  manifest.json
extension/src/: App.vue  main.js  popup.css
extension/src/components/: ChatScreen.vue  ClausesScreen.vue  DetectedScreen.vue  SummaryScreen.vue  UnlockScreen.vue
fake-server/: package-lock.json  package.json  server.js
frontend/: package-lock.json
frontend/chatbot/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/chatbot/public/: background.js  content.js  manifest.json
frontend/chatbot/src/: App.vue  api.ts  profile-settings.txt  router.ts  styles.css
frontend/chatbot/src/components/: AppNav.vue  ChatPanel.vue  FeatureCircle.vue  HomeStep.vue  Logo.vue
frontend/chatbot/src/pages/: BACKEND_API.md  Chatbot.vue  Dashboard.vue  Home.vue  Login.vue  NotFound.vue  Profile(1).vue  Profile.vue  Signup.vue  Survey.vue
frontend/chatbot/src/router/: index.js
frontend/chatbot/src/views/: Home.vue  Login.vue  Signup.vue  Survey.vue
